<resources>
    <string name="app_name">PuzzleDroid</string>
    <string name="str_button">Idioma</string>
    <string name="action_settings">Ajustes</string>

    <string name="str_en">Inglés</string>
    <string name="str_es">Español</string>
    <string name="str_it">Italiano</string>
    <string name="str_fr">Francés</string>
    <string name="str_de">Alemán</string>
    <string-array name="languages">
        <item>@string/str_en</item>
        <item>@string/str_es</item>
        <item>@string/str_it</item>
        <item>@string/str_fr</item>
        <item>@string/str_de</item>

    </string-array>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Primer Fragmento</string>
    <string name="second_fragment_label">Segundo Fragmento</string>
    <string name="next">Siguiente</string>
    <string name="previous">Previo</string>
    <string name="start_puzzle">COMENZAR</string>
    <string name="message_image">Selecciona la imagen o toma una foto y dale a COMENZAR</string>
    <string name="select_image">GALERÍA</string>
    <string name="take_photo">CÁMARA</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_first_fragment">PuzzleDroid</string>
    <string name="hello_second_fragment">Ayuda</string>
    <string name="tool_Ayuda">Ayuda</string>
    <string name="tool_salir">Salir</string>
    <string name="tool_salir3">Finalizar</string>
    <string name="continuar1">Continuar</string>
    <string name="continuar2">Continuar</string>
    <string name="continuar3">Continuar</string>
    <string name="foto_leon">leon</string>
    <string name="foto_perro">perro</string>
    <string name="foto_paleta">paleta</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="logo_team" translatable="false">logo_team</string>
    <string name="logo_main" translatable="false">logo_main</string>
    <string name="button_scores">Puntuaciones</string>
    <string name="button_play">Jugar</string>
    <string name="nivel1Compl" translatable="false">nivel1Compl</string>
    <string name="nivel2Compl" translatable="false">nivel2Compl</string>
    <string name="nivel3Compl" translatable="false">nivel3Compl</string>
    <string name="foto_salir" translatable="false">foto_salir</string>
    <string name="foto_seguro" translatable="false">foto_seguro</string>
    <string name="foto_team" translatable="false">foto_team</string>
    <string name="tu_tiempo">Guarda tu puntuación escribiendo aquí tu nombre</string>
    <string name="escribe_tu_nombre_aqu">nombre</string>
    <string name="tiempo">Tiempo</string>
    <string name="volver">Volver</string>
    <string name="salir">Salir</string>
    <string name="scores_player">Jugador</string>
    <string name="scores_score">Puntuacion</string>
    <string name="record">¡¡¡ FELICIDADES !!!   "ES UN NUEVO  RÉCORD</string>
    <string name="newRecord" translatable="false">newRecord</string>
    <string name="mode_normal">Normal</string>
    <string name="mode_gallery">Seleccionar fotos de la galeria</string>
    <string name="mode_camera">Hacer foto</string>
    <string name="camara">camara</string>
    <string name="galeria">galeria</string>
    <string name="normal">normal</string>
    <string name="channel_name">"¡NUEVO RÉCORD"</string>
    <string name="channel_description">"Se ha registrado un nuevo récord en PuzzleDroid"</string>
    <string name="enlace">Música de https://www.fiftysounds.com/es/</string>
    <string name="m_sica_de_la_app">Música de la app</string>
    <string name="titulo_cancion">Obra: Luces de Neón</string>
    <string name="select_button">Seleccionar</string>
    <string name="sonido_on">Sonido On</string>
    <string name="sonido_off">Sonido Off</string>
    <string name="seleccionar">Selecciona música del dispositivo</string>
    <string name="dj">DJ</string>
    <string name="atras">Atrás</string>
    <string name="dj1">DJ</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="mail_name" translatable="false">mail_name</string>
    <string name="sing_in" translatable="false">Sing in</string>
    <string name="sign_out" translatable="false">Sign out</string>
    <string name="str_ch">Chino</string>
    <string name="seleccion_modo">Por favor, selecciona un modo de juego</string>
    <string name="felicidades">¡ Felicidades !</string>
    <string name="nivel_1_completado">Nivel 1 completado</string>
    <string name="nivel_2_completado">Nivel 2 completado</string>
    <string name="nivel_3_completado">Juego completado</string>
    <string name="label_first_fragment">Completa el puzzle</string>
    <string name="puntuaciones">Puntuaciones</string>
    <string name="modo_juego">Modo de juego</string>
    <string name="musica">Música</string>
    <string name="Select_photo">Imagen para el siguiente nivel</string>
    <string name="recargar" translatable="false">recargar</string>

</resources>