<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".trans1">

    <Button
        android:id="@+id/button2"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="44dp"
        android:text="@string/continuar1"
        app:layout_constraintBottom_toTopOf="@+id/logo_team"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="131dp"
        android:layout_height="50dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="44dp"
        android:text="@string/tool_salir"
        app:layout_constraintBottom_toTopOf="@+id/logo_team"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/trans1_resolved"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/foto_leon"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/leon" />

    <ImageView
        android:id="@+id/logo_team"
        android:layout_width="215dp"
        android:layout_height="47dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/logo_team"
        android:src="@mipmap/puzzle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="272dp"
        android:layout_height="155dp"
        android:layout_marginBottom="3dp"
        android:contentDescription="@string/foto_leon"
        android:src="@mipmap/nivel1"
        app:layout_constraintBottom_toTopOf="@+id/image_leon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729" />

</androidx.constraintlayout.widget.ConstraintLayout>